--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-brs">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#fb1" />
   <meta name="description" content="" />
   <title>Dogs | Rede Social para Cachorros</title>
 </head>
 
 <body>
+  <noscript>É necessário habilitar o javascript para usar esse site</noscript>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
